--- a/deck/docs/16_RunningTheExamples.adoc
+++ b/deck/docs/16_RunningTheExamples.adoc
@@ -54,6 +54,6 @@ To run:
 '''
 
 |===
-| link:15_RemoteChunking.adoc[◀️ #Remote Chunking#] &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; link:../../README.adoc[#Start# 🔼]
+| link:15_RemoteChunking.adoc[◀️ #Remote Chunking#] &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; link:16_RunningTheExamples.adoc[#Running the examples# 🔼]
 |===
 
